--- a/styles/youtube.css
+++ b/styles/youtube.css
@@ -4,7 +4,7 @@
 #appbar-guide-menu, .guide-flyout, .yt-card, .yt-ui-menu-content { background : #323232 !important; }
 #yt-masthead-user #sb-button-notify { background : #F0F0F0 !important; }
 .add-to-widget .addto-playlist-item:hover, .add-to-widget .create-playlist-item:hover { background : #414141 !important; }
-#yt-uix-button-content, .epic-nav-item-heading, .yt-uix-button img, .yt-uix-button-icon-wrapper + .yt-uix-button-content { color : #CCC !important; }
+#yt-uix-button-content, .epic-nav-item-heading, .yt-uix-button img, .yt-uix-button-icon-wrapper + .yt-uix-button-content { color : #CCCCCC !important; }
 #appbar-nav .yt-uix-button.yt-uix-button-epic-nav-item { color : #E2E2E2 !important; }
 #action-panel-details a { color : #BEBEBE; !important }
 .yt-default h1, .yt-default h2, .yt-default h3, .yt-default h4, .yt-default h5, .yt-default h6, h1.yt, h2.yt, h3.yt, h4.yt, h5.yt, h6.yt,
@@ -12,7 +12,7 @@
 .yt-ui-menu-item, #watch-description, .watch8 .watch-extras-section .title, .watch8 .watch-extras-section .content,
 .not-watch8 #watch7-user-header .yt-user-name, #watch7-user-header .yt-user-info a, .watch8 #action-panel-details a, .pl-video-title-link,
 .c4-checklist-module .todo-title-text, .branded-page-module-title, .category-header .category-title { color : #E9E9E9 !important; }
-#watch7-sidebar .watch-sidebar-head a, #watch7-sidebar .watch-sidebar-foot a { color : #666 !important; }
+#watch7-sidebar .watch-sidebar-head a, #watch7-sidebar .watch-sidebar-foot a { color : #666666 !important; }
 #yt-masthead-container, .guide-section-separator, .yt-card .yt-uix-tabs, #footer-main, #masthead-appbar,
 .branded-page-v2-primary-col .branded-page-box, .section-list li .item-section .branded-page-box, .feed-header, .pl-video,
 #c4-header-bg-container, .branded-page-v2-subnav-container, .branded-page-v2-subnav-container, .yt-lockup-playlist-item,
@@ -32,12 +32,12 @@ body #footer-container { background : #1B1B1B !important; border-top : 1px solid
 li.channels-content-item.yt-shelf-grid-item { background : #272727 !important; text-align : center !important; padding : 16px 0 !important; border-radius : 6px !important; }
 .yt-lockup-grid .yt-lockup-title { max-width : none !important; }
 .yt-ui-menu-content:hover > .selected:hover, .selected, .yt-uix-menu-trigger-selected .yt-ui-menu-item, .yt-ui-menu-item:hover,
-.yt-uix-menu-trigger-selected .yt-ui-menu-item, .yt-ui-menu-item:hover, .yt-ui-menu-item:focus { background : #444 !important; }
+.yt-uix-menu-trigger-selected .yt-ui-menu-item, .yt-ui-menu-item:hover, .yt-ui-menu-item:focus { background : #444444 !important; }
 .yt-gb-shelf-main-content:hover, .yt-gb-shelf-main-content { box-shadow : none !important; }
 li.guide-section h3 a { color : #FF3C42 !important; }
 .all-comments, .all-comments a { background : none !important; }
 .mj { background-color : #323232 !important; }
-.comments .comment-footer-action { color : #FFF !important; }
+.comments .comment-footer-action { color : #FFFFFF !important; }
 .comments .channel-owner .comment-header .user-name, .mj { background-color : #323232 !important; }
 a.yt-uix-button.yt-uix-button-epic-nav-item, button.yt-uix-button-epic-nav-item, .epic-nav-item { color : #AFAFAF !important; }
 .channel-header .branded-page-header-title .branded-page-header-title-link { color : #CC181E !important; }
@@ -52,7 +52,7 @@ h3, h2, h1 { text-shadow : none !important; }
 #enhance-footer { border-top : 1px solid #1B1B1B !important; }
 .translation-editor-header .translation-editor-column-half, .translation-editor-header .translation-editor-column-divider { border-bottom : 1px solid #1B1B1B !important; }
 .metadata-editor-container .video-settings-form { background : #323232 !important; }
-.basic-info-tab .video-settings-tag-chips-container { background : #FFF !important; }
+.basic-info-tab .video-settings-tag-chips-container { background : #FFFFFF !important; }
 .monetize-with-ads.monetize-options-box { background : #323232 !important; box-shadow : 0 1px 0 #323232 !important; }
 hr.metadata-separator-line { border-color : #323232 !important; border-bottom : 1px solid #1B1B1B !important; }
 #inline-editor-main { background-color : #323232 !important; }
@@ -69,11 +69,14 @@ hr.metadata-separator-line { border-color : #323232 !important; border-bottom : 
 .timedtext-content { background-color : #323232 !important; }
 #add-captions-section { border-bottom : 1px solid #1B1B1B !important; }
 #bottom-notes-section, #video-settings-section { border-top : 1px solid #1B1B1B !important; }
-.yt-lockup .yt-lockup-byline a, .lohp-video-metadata .view-count, .comment-renderer-header .comment-renderer-time a, #comment-section-renderer .comment-renderer-reply, .comment-section-header-renderer { color : #FFF !important; }
+.yt-lockup .yt-lockup-byline a, .lohp-video-metadata .view-count, .comment-renderer-header .comment-renderer-time a, #comment-section-renderer .comment-renderer-reply, .comment-section-header-renderer { color : #FFFFFF !important; }
 .lohp-video-metadata, .pl-video-owner a, #pl-header .pl-header-details, .primary-header-contents .view-as-menu .view-as-menu-trigger, .empty-shelf-text, .video-player-view-component .description, .video-player-view-component .view-count .count, .video-player-view-component .view-count .content-item-time-created { color : #F8F8F8 !important; }
 .c4-checklist-module .view-all-link a, .yt-uix-form-label { color : #F8F8F8 !important; }
-.lohp-video-metadata .yt-user-name { color : #FFF !important; }
-.comment-simplebox-renderer-collapsed-content { background : #FFF !important; color : #323232 !important; }
-.guide-item .guide-countt, #watch8-action-buttons .yt-uix-button, label, .watch-view-count { color : #FFF !important; }
+.lohp-video-metadata .yt-user-name, .create-playlist-item { color : #FFFFFF !important; }
+.comment-simplebox-renderer-collapsed-content { background : #FFFFFF !important; color : #323232 !important; }
+.guide-item .guide-countt, #watch8-action-buttons .yt-uix-button, label, .watch-view-count { color : #FFFFFF !important; }
 .about-stats .about-stat, .about-metadata-label, .branded-page-v2-primary-col .about-description.branded-page-box-padding { color : #F8F8F8 !important; }
-.video-list .video-list-item .stat, .pl-video-owner { color : #D1D1D1 !important; }
+.video-list .video-list-item .stat, .pl-video-owner, .yt-uix-button-content { color : #D1D1D1 !important; }
+#yt-masthead-notifications-content .item-section > li > .yt-lockup-tile, #yt-masthead-notifications-content .yt-ui-ellipsis { background : #323232 !important; }
+#yt-masthead-notifications-content .item-section > li > .yt-lockup-tile:hover, #yt-masthead-notifications-content:hover .yt-ui-ellipsis { background : #FFFFFF !important; }
+#yt-masthead-user #yt-masthead-notifications-button, #upload-btn.yt-uix-button-has-icon { background : #FFFFFF !important; }
